// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`center\` prop matches with snapshot 1`] = `
<input
  className="sc-AxirZ gGGKvu"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="sc-AxirZ gzSokG"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="sc-AxirZ hLnVGF"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="sc-AxirZ hdggzc"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`giant\` prop matches with snapshot 1`] = `
<input
  className="sc-AxirZ bBHpxA"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`huge\` prop matches with snapshot 1`] = `
<input
  className="sc-AxirZ carLrL"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="sc-AxirZ hLnVGF"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="sc-AxirZ hLnVGF"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tiny\` prop matches with snapshot 1`] = `
<input
  className="sc-AxirZ gUZorU"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="sc-AxirZ AJCco"
  disabled={false}
  name="text"
/>
`;
